--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -30,7 +30,7 @@
 
 <div class="clearfix"></div>
 
-<div class="header-container">
+<div class="header-container filter-container">
     <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]">
         {{filterSet.key}}={{filterSet.value}}
       <a class="btn" ng-click="clearFilterSet()">
