--- a/app/partials/directives/circularHeatForm.html
+++ b/app/partials/directives/circularHeatForm.html
@@ -15,7 +15,7 @@
     </options-menu>
 </div>
 
-<div class="header-container">
+<div class="header-container filter-container">
     <h4>Most active times of the week were <span class="count text-primary" ng-bind="maxTime"></span> and <span class="count text-primary" ng-bind="maxDay"></span></h4>
 </div>
 
