--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -66,7 +66,7 @@
     </options-menu>
 </div>
 
-<div class="header-container second-header">
+<div class="header-container filter-container second-header">
     <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[showFilter]">
         Filter
         <a class="btn" ng-click="clearFilter()">
