--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -53,9 +53,9 @@
 
 <div class="clearfix"></div>
 
-<div class="header-container header-container-large">
+<div class="header-container filter-container">
     <h4 class="pull-left">Showing 
-        <span class="count count-large text-primary" ng-bind="tableOptions.data.length"></span> of 
+        <span class="count text-primary" ng-bind="tableOptions.data.length"></span> of 
         <span ng-bind="totalRows"></span>
     </h4>
 
