--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -31,7 +31,7 @@
 
 <div class="clearfix"></div>
 
-<div class="header-container">
+<div class="header-container filter-container">
     <div class="filter-reset pull-right" ng-repeat="tagName in filterTags">
         {{tagName}}
         <a class="btn" ng-click="removeFilter(tagName)">
