--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -36,7 +36,7 @@
 
 <div class="clearfix"></div>
 
-<div class="header-container">
+<div class="header-container filter-container">
     <div class="legend legend-right">
         <div class="legend-item" ng-class="{true: '', false: 'hidden'}[colorMappings.length >= seriesLimit]">
             <span class="legend-text text-muted"><strong>Top {{seriesLimit}}</strong></span>
