--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -96,3 +96,7 @@
         </div>
     </div>
 </div>
+
+<div class="footer-container">
+    <span class="footer-text pull-left">SHIFT + DRAG to filter</span>
+</div>
