Fixed a bug in resizing the Bar Chart and Line Chart based on the height of the legend.  Note that the legend only gets taller in the Line Chart.

--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -37,7 +37,7 @@
 <div class="clearfix"></div>
 
 <div class="header-container filter-container">
-    <div class="legend legend-right">
+    <div class="legend">
         <div class="legend-item" ng-class="{true: '', false: 'hidden'}[colorMappings.length >= seriesLimit]">
             <span class="legend-text text-muted"><strong>Top {{seriesLimit}}</strong></span>
         </div>
