NEON-1459 The D3 Graph will now query for the list of nodes but will not draw a graph containing just the nodes.  This avoids using D3 to draw a relatively useless graph and still allows users to filter on specific nodes from the options dropdown.  Hopefully this will not critically impact graph performance on large datasets.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -31,12 +31,9 @@
                 </div>
                 <div class="form-group">
                     <label>Filter on {{selectedNodeField}}</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Enter Node Value" ng-model="selectedNode" ng-disabled="!(selectedNodeField)">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default refresh" ng-click="selectNode()"><span class="glyphicon glyphicon-refresh"></span></button>
-                        </span>
-                    </div>
+                    <select class="form-control" ng-model="selectedNode" ng-options="node for node in nodes" ng-required="false" ng-disabled="!(selectedNodeField) || (nodes.length == 0)" ng-change="selectNode()">
+                        <option value=""></option>
+                    </select>
                 </div>
 
                 <div class="form-group">
