--- a/app/css/directives/queryResultsTable.css
+++ b/app/css/directives/queryResultsTable.css
@@ -109,6 +109,33 @@
     background: #FFFFFF;
 }
 
+.query-results-directive .form-inline .form-group > label,
+.query-results-directive .form-inline .form-input-group > label{
+    margin-left: 10px;
+    margin-right: 5px;
+}
+
+.query-results-directive .form-inline .form-group .btn-group label.btn{
+    margin-right: 0px;
+}
+
+.query-results-directive .form-inline .form-group:first-child > label,
+.query-results-directive .form-inline .form-input-group:first-child > label{
+    margin-left: 0px;
+}
+
+.query-results-directive .form-inline .form-input-group > label{
+    float: left;
+    margin-top: 9px;
+    margin-right: 10px;
+}
+
+.query-results-directive .form-inline .form-input-group {
+    display: inline-block;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+
 @media (max-width: 767px) {
     .data-tray h4.pull-left,
     .data-tray .form-inline,
