--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -32,7 +32,7 @@
             <div class="input-group">
                 <input type="number" min="1" class="form-control" ng-model="options.nodeLimit" required>
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" ng-click="queryForData()">
+                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="queryForData()">
                         <span class="glyphicon glyphicon-refresh"></span>
                     </button>
                 </div>
