--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -25,7 +25,7 @@
             <div class="input-group">
                 <input type="number" min="1" class="form-control" ng-model="options.limit" required>
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" ng-click="handleLimitRefreshClick()">
+                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleLimitRefreshClick()">
                         <span class="glyphicon glyphicon-refresh"></span>
                     </button>
                 </div>
