--- a/app/css/directives/filterBuilder.css
+++ b/app/css/directives/filterBuilder.css
@@ -18,6 +18,7 @@
     height: 100%;
     width: 100%;
     padding: 20px;
+    overflow: auto;
 }
 
 .filter-directive .header-container-large {
@@ -92,7 +93,15 @@
 
 .filter-directive .form-group-button .btn {
     padding: 6px 12px;
-    margin-top: 27px;
+}
+
+.filter-directive .labels {
+    margin-top: 10px;
+}
+
+.filter-directive .labels label {
+    margin: 0px 2px;
+    height: 15px;
 }
 
 @media (min-width: 500px) and (max-width: 767px) {
