NEON-1324 converting common css values to variables

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,6 +1,8 @@
+@import 'variables.less';
+
 .menu {
     list-style: none;
-    border-bottom: 0.1em solid black;
+    border-bottom: 0.1em solid #000000;
     margin-bottom: 2em;
     padding: 0 0 0.5em;
 
