--- a/app/css/directives/circularHeatChart.less
+++ b/app/css/directives/circularHeatChart.less
@@ -25,7 +25,7 @@
         margin: auto;
 
         .segment, .radial {
-            fill: #777777;
+            fill: @main-text-color;
             font-weight: bold;
         }
     }
