--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -34,7 +34,7 @@ div {
         height: 20px;
         padding: 5px;
         font: 12px sans-serif;
-        background: lightsteelblue;
+        background: #B0C4DE;
         border: 0px;
         border-radius: 8px;
         pointer-events: none;
@@ -48,11 +48,11 @@ div {
 }
 
 .node {
-  stroke: #fff;
+  stroke: #FFFFFF;
   stroke-width: 1.5px;
 }
 
 .link {
-  stroke: #999;
+  stroke: #999999;
   stroke-opacity: .6;
 }
