--- a/app/css/directives/timelineSelectorChart.less
+++ b/app/css/directives/timelineSelectorChart.less
@@ -44,8 +44,8 @@
     }
 
     .area {
-        fill: #39b54a;
-        stroke: #39b54a;
+        fill: @accent-bright;
+        stroke: @accent-bright;
         stroke-width: 1px;
         clip-path: url(#clip);
     }
@@ -67,8 +67,8 @@
     }
 
     .bar {
-      fill: #39b54a;
-      stroke: #39b54a;
+      fill: @accent-bright;
+      stroke: @accent-bright;
       stroke-width: 1px;
     }
 
@@ -100,7 +100,7 @@
     .dot{
         stroke: #f1f1f1;
         stroke-width: 2px;
-        fill: #39b54a;
+        fill: @accent-bright;
     }
 
     .mini-axis{
