--- a/app/css/directives/visualizationWidget.less
+++ b/app/css/directives/visualizationWidget.less
@@ -42,7 +42,7 @@
 
         .glyphicon-resize-full, .glyphicon-resize-small {
             opacity: 1;
-            color: #39b54a;
+            color: @accent-bright;
         }
     }
 
