--- a/app/css/widgetStyle.less
+++ b/app/css/widgetStyle.less
@@ -27,7 +27,7 @@ html {
     a {
         &.dropdown-toggle {
             border: 0;
-            background-color: #39b54a;
+            background-color: @accent-bright;
             color: #FFFFFF;
             padding: 10px 30px;
             border-radius: 3px;
@@ -153,7 +153,7 @@ html {
 
 .filter-tray {
     .filter{
-        background-color: #f1f1f1;
+        background-color: @main-background;
     }
 
     .filter-new {
