--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -17,7 +17,7 @@
 span {
     &.glyphicon {
         &:focus, &:hover {
-            color: #39b54a;
+            color: @accent-bright;
         }
     }
 }
@@ -28,10 +28,10 @@ span {
 
 .count-by-grid {
     min-height: 80px;
-    background-color: #F1F1F1;
-    border: 1px solid #CCCCCC;
+    background-color: @main-background;
+    border: 1px solid @mid-gray;
     border-radius: 2px;
-    box-shadow: 0 1px 4px rgba(154, 154, 154, 0.2);
+    box-shadow: 0 1px 4px @shadow;
     box-sizing: content-box;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
@@ -53,9 +53,8 @@ span {
         .slick-row {
             opacity: 0.5;
 
-            // Will override opacity 0.5 rule due to specificity and cascade.
             &.active {
-                background: #88d292;
+                background: @accent-dulled;
                 opacity: 1.0;
             }
         }
@@ -69,31 +68,31 @@ span {
         border-top: 0;
 
         .slick-header-column{
-            color: #eeeeee;
-            background: #39b54a;
+            color: @light-text-color;
+            background: @accent-bright;
 
             &.ui-state-hover{
-                color: #39b54a;
-                background: #FFFFFF;
+                color: @accent-bright;
+                background: @light-background;
             }
         }
 
         .slick-header-column-sorted{
-            color: #39b54a;
-            background: #FFFFFF;
+            color: @accent-bright;
+            background: @light-background;
             font-style: normal;
         }
 
         .slick-sortable-placeholder{
-            background: #cccccc;
+            background: @mid-gray;
         }
     }
 
     .slick-row {
-        background: #FAFAFA;
+        background: @main-background-lighten;
 
         &.odd {
-            background: #F1F1F1;
+            background: @main-background;
         }
     }
 }
@@ -143,14 +142,14 @@ span {
 
 .visualization-widget {
     .countByDirective {
-        height: 100%;
-        width: 100%;
+        height: @widget-height;
+        width: @widget-width;
     }
 }
 
 .visualization-widget-mobile {
     .countByDirective {
-        height: 400px;
-        width: 100%;
+        height: @mobile-widget-height;
+        width: @mobile-widget-width;
     }
 }
