--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -40,7 +40,7 @@
     }
 
     .btn-group{
-        margin: 0px;
+        margin: 10px 0px 0px 0px;
     }
 
     .chart-options {
@@ -90,11 +90,11 @@
         }
 
         .btn-primary{
-            color: #39b54a;
+            color: @accent-bright;
 
             &:hover{
                 color: #FFFFFF;
-                background-color: #39b54a;
+                background-color: @accent-bright;
                 border-color: #2F9F3E;
             }
         }
