--- a/app/css/style.less
+++ b/app/css/style.less
@@ -25,7 +25,7 @@
 }
 
 a {
-    color: #39b54a;
+    color: @accent-bright;
 
     &:hover, &:focus {
         color: #2F9F3E;
@@ -57,7 +57,7 @@ h6, .h6 {
 
 label{
     font-size: 12px;
-    color: #777777;
+    color: @main-text-color;
     text-transform: uppercase;
 }
 
@@ -125,7 +125,7 @@ label{
 }
 
 .btn-primary {
-    background-color: #39b54a;
+    background-color: @accent-bright;
     border-color: #2F9F3E;
 
     &:hover, &:focus, &active {
@@ -139,11 +139,11 @@ label{
     }
 
     &.disabled, &[disabled], fieldset[disabled] {
-        background-color: #39b54a;
+        background-color: @accent-bright;
         border-color: #2f9f3e;
 
         &:hover, &:focus, &:active, &.active {
-            background-color: #39b54a;
+            background-color: @accent-bright;
             border-color: #2f9f3e;
         }
     }
@@ -157,14 +157,14 @@ label{
 .chart-options {
     > a {
         padding: 2px 0px;
-        color: #39b54a;
+        color: @accent-bright;
 
         &.collapsed {
             color: #999999;
         }
 
         &:hover {
-            color: #39b54a;
+            color: @accent-bright;
         }
 
         &:active, &.active {
@@ -329,14 +329,14 @@ label{
 .dropdown-menu {
     > .active {
         > a {
-            background-color: #39b54a;
+            background-color: @accent-bright;
         }
     }
 }
 
 .filter-reset {
     font-weight: bold;
-    color: #777777;
+    color: @main-text-color;
     color: rgba(0,0,0,0.5);
     background-color: #e9e9e9;
     padding-left: 11px;
@@ -454,7 +454,7 @@ label{
 
 .form-control {
     &:focus {
-        border-color: #39b54a;
+        border-color: @accent-bright;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(57, 181, 74, 0.4);
     }
 }
@@ -526,7 +526,7 @@ label{
 }
 
 .label-primary{
-    background-color: #39b54a;
+    background-color: @accent-bright;
     border-color: #2F9F3E;
 }
 
@@ -580,7 +580,7 @@ label{
 
 .legend-scale {
     .legend-item {
-        color: #777777;
+        color: @main-text-color;
 
         .legend-text {
             &:first-child {
@@ -630,8 +630,8 @@ label{
 
                 > a{
                     margin-right: 40px;
-                    color: #39b54a;
-                    border-bottom: 2px solid #39b54a;
+                    color: @accent-bright;
+                    border-bottom: 2px solid @accent-bright;
                     padding: 15px 0 13px;
 
                     @media (max-width: 767px) {
@@ -640,13 +640,13 @@ label{
 
                     &.collapsed, &.collapsed:focus{
                         background: none;
-                        color: #777777;
+                        color: @main-text-color;
                         border: 0;
                         padding-bottom: 15px;
                     }
 
                     &:focus, &:hover, &.collapsed:hover{
-                        color: #39b54a;
+                        color: @accent-bright;
                     }
                 }
             }
@@ -654,7 +654,7 @@ label{
             > .dropdown {
                 > .primary{
                     border: 0;
-                    background-color: #39b54a;
+                    background-color: @accent-bright;
                     color: #FFFFFF;
                     padding: 15px 30px;
                     font-weight: bold;
@@ -761,7 +761,7 @@ label{
 }
 
 .text-primary{
-    color: #39b54a;
+    color: @accent-bright;
 }
 
 .text-success{
@@ -783,7 +783,7 @@ label{
 
     span{
         font-weight: bold;
-        color: #39b54a;
+        color: @accent-bright;
         display: block;
         text-shadow: 0 2px 0 #FFFFFF;
     }
